# NeuroNavigatAR

./: AR_fNIRS_GUI.py  NNAR_GUI.ipynb  NNAR_GUI.py  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
1020atlas/: 1020atlas_2-0Years.json  1020atlas_20-24Years.json  1020atlas_20-24Years_5points.json  1020atlas_3-0Years.json  1020atlas_30-34Years.json  1020atlas_35-39Years_5points.json  1020atlas_40-44Years_5points.json  1020atlas_50-54Years_5points.json  1020atlas_55-59Years.json  1020atlas_55-59Years_5points.json  1020atlas_60-64Years.json  1020atlas_60-64Years_5points.json  1020atlas_80-84Years.json
GUI_functions/: livefacemaskGUI.py  nnar_utils.py
GUI_icon/: gui_icon.pptx  ~$gui_icon.pptx
Trained model/: x_iz_all.mat  x_rpa_all.mat
data/atlases/: 1020atlas_25-29Years.json  1020atlas_25-29Years_5points.json  1020atlas_30-34Years_5points.json  1020atlas_35-39Years.json  1020atlas_40-44Years.json  1020atlas_45-49Years.json  1020atlas_45-49Years_5points.json  1020atlas_5-0Years.json  1020atlas_50-54Years.json  1020atlas_65-69Years.json  1020atlas_65-69Years_5points.json  1020atlas_70-74Years.json  1020atlas_70-74Years_5points.json  1020atlas_75-79Years.json  1020atlas_75-79Years_5points.json  1020atlas_80-84Years_5points.json  1020atlas_Colin27.json  1020atlas_Colin27_5points.json
data/models/: x_cz_all.json  x_cz_all.mat  x_iz_all.json  x_lpa_all.json  x_lpa_all.mat  x_rpa_all.json
notebooks/: NNAR_GUI.ipynb
src/neuronavigatar/: main_gui.py
src/nnar/: __init__.py  main_gui.py  utils.py
test/: test_utils.py
